etc_files_pi/iptables-rules.v4
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o tun0 -j MASQUERADE
-A POSTROUTING -o wwan0 -j MASQUERADE
-A POSTROUTING -o wwan1 -j MASQUERADE
-A POSTROUTING -o eth1 -j MASQUERADE
-A POSTROUTING -o eth2 -j MASQUERADE
-A POSTROUTING -o eth3 -j MASQUERADE
-A POSTROUTING -o eth4 -j MASQUERADE
-A POSTROUTING -o eth5 -j MASQUERADE
-A POSTROUTING -o eth6 -j MASQUERADE
-A POSTROUTING -o eth7 -j MASQUERADE
-A POSTROUTING -o eth8 -j MASQUERADE
-A POSTROUTING -o wlan0 -j MASQUERADE
COMMIT
